--- a/scss/08-utilities/_transform.scss
+++ b/scss/08-utilities/_transform.scss
@@ -11,5 +11,5 @@
   transform: rotate(45deg) translate(-1px, -2px);
 }
 .scale-logo {
-  transform: scale(1);
+  transform: scale(1) translateZ(0);
 }
