--- a/scss/main.css
+++ b/scss/main.css
@@ -439,7 +439,7 @@ p {
   font-size: 3.5rem;
   letter-spacing: 6px;
   z-index: 1;
-  transform: scale(0, 0, 1);
+  transform: scale(0) translateZ(0);
   transition: transform 1s ease;
 }
 .logo::first-letter {
@@ -575,7 +575,7 @@ p {
 }
 
 .scale-logo {
-  transform: scale(1);
+  transform: scale(1) translateZ(0);
 }
 
 .visibility-hidden {
